--- a/richarsi.website/config/nginx.conf
+++ b/richarsi.website/config/nginx.conf
@@ -20,7 +20,7 @@ http {
         
         # For /tasks and /tasks/
         location ~* ^/tasks(/|$) {
-            proxy_pass http://blackboard:8000;
+            proxy_pass http://blackboard-service:8000;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -29,7 +29,7 @@ http {
 
         # For /status and /status/
         location ~* ^/status(/|$) {
-            proxy_pass http://blackboard:8000;
+            proxy_pass http://blackboard-service:8000;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -37,20 +37,3 @@ http {
         }
     }
 }
-
-
-# OLD CONFIG
-# worker_processes 2;
-
-# error_log /var/log/nginx-error.log info;
-
-# events {
-#     worker_connections 1024;
-# }
-# http {
-#     server {
-#         location / {
-#             root /data/www;
-#         }
-#     }
-# }
